<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_horoscope">

    <fragment
        android:id="@+id/navigation_horoscope"
        android:name="com.wiserax.zodiac.ui.horoscope.HoroscopeFragment"
        android:label="@string/title_horosope"
        tools:layout="@layout/fragment_horoscope">
        <action
            android:id="@+id/action_horoscope_to_birthdate"
            app:destination="@id/navigation_birthdate"
            app:popUpTo="@+id/navigation_horoscope"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_psychomatrix"
        android:name="com.wiserax.zodiac.ui.psychomatrix.PsychomatrixFragment"
        android:label="@string/title_psychomatrix"
        tools:layout="@layout/fragment_psychomatrix" />


    <fragment
        android:id="@+id/navigation_birthdate"
        android:name="com.wiserax.zodiac.ui.birthdate.BirthDateFragment"
        tools:layout="@layout/fragment_birthdate">
        <action
            android:id="@+id/action_birthdate_to_horoscope"
            app:destination="@id/navigation_horoscope"
            app:popUpTo="@+id/navigation_birthdate"
            app:popUpToInclusive="true">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_compatibility"
        android:name="com.wiserax.zodiac.ui.compatibility.CompatibilityFragment"
        android:label="@string/title_compatibility"
        tools:layout="@layout/fragment_compatibility" >
        <action
            android:id="@+id/action_compatibility_to_compabilityFragment2"
            app:destination="@id/compabilityFragment2" />
    </fragment>

    <fragment
        android:id="@+id/compabilityFragment2"
        android:name="com.wiserax.zodiac.ui.compatibility.CompatibilityFragment2"
        android:label="fragment_compability2"
        tools:layout="@layout/fragment_compatibility2" >
        <action
            android:id="@+id/action_compabilityFragment2_to_navigation_compatibility"
            app:destination="@id/navigation_compatibility" />
        <argument
            android:name="title1"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title2"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>