<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.compatibility.CompatibilityFragment2"
    android:layout_marginBottom="?actionBarSize"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutSigns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewSign1"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_first_sign_image"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@drawable/ic_sign_leo" />

                <TextView
                    android:id="@+id/textViewTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16ssp"
                    android:fontFamily="@font/jost_bold"
                    android:textSize="@dimen/_20ssp"
                    tools:text="Лев" />

                <TextView
                    android:id="@+id/textViewDates1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    tools:text="22 июл. - 21 авг." />

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64sdp"
                android:fontFamily="@font/jost_bold"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/plus"
                android:textSize="@dimen/_24ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewSign2"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_second_sign_image"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@drawable/ic_sign_virgo" />

                <TextView
                    android:id="@+id/textViewTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:textSize="@dimen/_20ssp"
                    android:fontFamily="@font/jost_bold"
                    tools:text="Дева" />

                <TextView
                    android:id="@+id/textViewDates2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    tools:text="22 авг. - 21 сен." />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutStats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_12sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_16sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/card_red"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:contentDescription="@string/description_icon_heart"
                        android:src="@drawable/ic_compatibility_love"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textViewLove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/jost_bold"
                        tools:text="71%" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_weight="1"
                    android:background="@color/card_yellow"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:contentDescription="@string/description_icon_hand"
                        android:src="@drawable/ic_compatibility_friendship"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textViewFriendship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/jost_bold"
                        tools:text="66%" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_weight="1"
                    android:background="@color/card_blue"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:contentDescription="@string/description_icon_case"
                        android:src="@drawable/ic_compatibility_work" />

                    <TextView
                        android:id="@+id/textViewWork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/jost_bold"
                        tools:text="82%" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_weight="1"
                    android:background="@color/card_green"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:contentDescription="@string/description_icon_home"
                        android:src="@drawable/ic_compatibility_family"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textViewFamily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/jost_bold"
                        tools:text="75%" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGeneralTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/jost_bold"
                    android:textSize="@dimen/_20ssp"
                    tools:text="Общая" />

                <TextView
                    android:id="@+id/textViewPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jost_bold"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_20ssp"
                    tools:ignore="TextContrastCheck"
                    tools:text="65%" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewGeneralDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textSize="@dimen/_16ssp"
                tools:text="@sample/compatibility_example.json/sample" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>